...
    <string name="finalize">finalizar</string>
    <string name="resume">reanudar</string>
    <string name="title_activity_count">CountActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_settings">SettingsActivity</string>

...
    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="done">HECHO</string>
    <string name="demo_task_code">P11-3-50</string>
    <string name="demo_task_pagination">2 de 2</string>
    <string name="sku">SKU</string>
    <string name="description">Descripcion</string>
    <string name="quantity">Cantidad</string>
    <string name="quant">Cant</string>
...
