...
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/demo_task_title_line"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/optionsBtn"
            app:layout_constraintStart_toEndOf="@+id/taskStateTv"
            app:layout_constraintTop_toTopOf="@+id/taskStateTv" />

        <ImageButton
            android:id="@+id/optionsBtn"
            style="@android:style/Widget.DeviceDefault.Light.ImageButton"
...
